<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BCoop</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_with_google">Login with Google</string>
    <string name="confirm">Confirm Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="prize">Gift</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="gifts"> Gifts </string>
    <string name="accept"> Accept </string>
    <string name="success"> Successful purchase </string>
    <string name="abort"> Purchase Canceled </string>
    <string name="level">Level </string>
    <string name="veurePremis">My Gifts </string>
    <string name="configHabilitatsUser">Abilities Configuration </string>
    <string name="back">Back</string>
    <string name="MyPrizes">My Prizes</string>
    <string name="accept_privacy">By clicking below, you agree to BCoop Terms of Service and Privacy Policy.</string>
    <string name="unvalid_username">Please enter a valid username</string>
    <string name="unvalid_email">Please enter a valid email</string>
    <string name="unvalid_passwd">Please enter a valid password
                                \nMinimum: 8 characters long</string>
    <string name="confirm_passwd">Confirmation password does not match</string>

    <string name="error_register_email_already_used">Email address already used</string>
    <string name="error_register">Error during register, Try Again</string>


    <string name="en" translatable="false">EN</string>
    <string name="es" translatable="false">ES</string>
    <string name="ca" translatable="false">CA</string>

    <string name="remind_me_later">Remind me later</string>
    <string name="welcome_user">Welcome </string>
    <string name="initial_config_first">Please take a few steps to set up your account</string>
    <string name="initial_setup_photo">Would you like to add an image to your profile?</string>
    <string name="click_to_change_image">Press the image above to upload an image</string>
    <string name="initial_setup_location">Confirm this is your home location</string>

    <string name="failed">Failed. Please try again</string>

    <string name="buy">Acquire gift</string>
    <string name="sure">Do you want to acquire this gift?</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Please select an image</string>
    <string name="location_no_available">Please make sure that your location is available</string>
    <string name="nivell">Level</string>
    <string name="money">Money</string>
    <string name="mostrar_mes_coment">Show more comments</string>
    <string name="price">Price</string>
    <string name="coins"> Coins</string>
    <string name="use">Use</string>
    <string name="to_store">Show the code to the store.</string>
    <string name="usePrize">Do you want to use this prize?</string>
    <string name="notEnough">You don\'t have enough coins</string>

    <string name="change">Change</string>
    <string name="userImage">User Image</string>
    <string name="userLocation">Location</string>
    <string name="deleteUser">Delete User</string>
    <string name="writeNewUsername">Insert your new username</string>
    <string name="confirmbutton">Confirm</string>
    <string name="writeCurrentPassword">Insert your current password</string>
    <string name="writeNewPassword">Insert your new password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="writeDelete">Type your password to delete your user</string>
    <string name="confirmDelete">Confirm Delete</string>
    <string name="time_at"> at </string>
    <string name="incorrect_password">Wrong Password</string>
    <string name="delete_perfil">Delete Profile</string>
    <string name="perfil_cannot_delete">Failed to delete profile. Please try later</string>

    <string name="user_settings">User Settings</string>
    <string name="EnQuePotsAjudar">How can you help your neighbours?</string>
    <string name="configiguracioHabUser">Abilities Configuration</string>

    <string name="notification">Notification</string>

    <string name="write_a_message">Write a message</string>

    <string name="ask_service">Ask service</string>
    <string name="service">Service</string>
    <string name="service_date">Date</string>
    <string name="selectDate">Select date</string>
    <string name="coinsPay">Coins to pay</string>
    <string name="service_message">Message</string>
    <string name="askButton">Ask service</string>
    <string name="refuse">Refuse</string>
    <string name="chat_with">Chat with him/her</string>
    <string name="applicant">Applicant</string>
    <string name="ability">Ability: </string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="duration">Duration</string>
    <string name="service_request">Service Request</string>
    <string name="service_response">Service Response</string>
    <string name="trading_information">Trading Information</string>
    <string name="you_spent">You spent</string>
    <string name="to_acquire_gift"> coins to acquire gift.</string>
    <string name="delete_notification"> Do you want to delete this notification?</string>
    <string name="service_valoration">Service Valoration</string>
    <string name="request_agreed">accepted your request for service. You can check the service detail in your service list.</string>
    <string name="request_rejected">rejected your service request.</string>
    <string name="hour">Hour</string>
    <string name="sent_seccessfully">Sent successfully</string>
    <string name="comment">Comment</string>
    <string name="valoration">Valoration</string>
    <string name="servei_commented">commented on your service.</string>
    <string name="NotEnoughCoins">not enough coins</string>
    <string name="InvalidServiceDate">chosen date not valid</string>
    <string name="ReportUser">Explain what happened here.</string>
    <string name="Report">Report</string>
    <string name="Send">Send</string>
    <string name="ReportEnviat"> Successfully sended</string>
    <string name="image">Image</string>
    <string name="view_profile">View profile</string>
    <string name="aquire_Service"> for a finished service </string>
    <string name="ayou_recieved"> you have received </string>
    <string name="you_sent"> you have sent</string>

    <string name="reports">Reports</string>
    <string name="no_reports">No reports for user</string>
    <string name="view_reports">Look At All Reports</string>

    <string name="my_services">My Services</string>
    <string name="proveidor">Provider: </string>
    <string name="estat">State: </string>

    <string name="lastBan">Last Ban Date: </string>
    <string name="noBan">" It has never been blocked"</string>
    <string name="prize_code">Enter prize code manually: </string>
    <string name="scan_code">Scan the prize code: </string>
    <string name="scan">Enter code</string>
    <string name="prize_used">Failure to use, the prize code has been used. </string>
    <string name="prize_no_exist">Failure to use, the prize code does not exist. </string>
    <string name="esta_pendent"> "Service pending of confirmation. Try chatting with your provider.</string>
    <string name="monedes_a_pagar">"coins to pay:"</string>
    <string name="pay">"Pay"</string>
    <string name="descripcio">Description</string>
    <string name="PriceName">Prize Name</string>

    <string name="levelup">You reached level </string>
    <string name="service_completed">Service Completed</string>
    <string name="add_comment">Add a comment (optional)</string>
    <string name="rate_service">How was the service?</string>

    <string name="makeAdmin">Make user admin</string>
    <string name="makeShop">Enable shop functions</string>
    <string name="blockUser">Block user</string>

    <string name="incidence_question">What was your problem?</string>
    <string name="incidence_write">Tell us about what happened</string>

    <string name="valoration_enviada">service rating sent</string>
    <string name="et_va_donar_servei_en">helped you with</string>
    <string name="el_dia">on</string>
    <string name="solicitut_enviada">service request sent</string>
    <string name="no_tens_serveis">No services here ... Sure there is something your neighbors can help you with!</string>

    <string name="name_profile">Name</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating:</string>

    <string name="tutorial1">Search abilities</string>
    <string name="tutorial1_2">Choose tha ability that you\'re interested in</string>
    <string name="tutorial3">Navigate to a profile</string>
    <string name="tutorial3_2">Navigate to the profile that you are most interested in</string>
    <string name="tutorial4">Chat with the user</string>
    <string name="tutorial4_2">Choose tha ability that you\'re interested in</string>
    <string name="tutorial5">Send a service request to the user</string>
    <string name="tutorial5_2">Choose tha ability that you\'re interested in</string>
    <string name="tutorial6">Search abilities</string>
    <string name="tutorial6_2">Choose tha ability that you\'re interested in</string>
    <string name="tutorial7">Search abilities</string>
    <string name="tutorial7_2">See the services that you\'ve in progress</string>
    <string name="tutorial8">And get prizes!</string>
    <string name="tutorial8_2">Configure your profile</string>
    <string name="tutorial9">And get prizes!</string>
    <string name="tutorial9_2">Choose tha ability that you\'re interested in</string>
    <string name="demanar_servei">Request a service</string>

    <string name="language">eng</string>



</resources>
