<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bcoop.bcoop.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bcoop.bcoop.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="email"
            app:argType="string"
            android:defaultValue="myPerfil" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.bcoop.bcoop.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
    android:id="@+id/navigation_prize"
    android:name="com.bcoop.bcoop.ui.prize.PrizeFragment"
    android:label="@string/prize"
    tools:layout="@layout/fragment_prize" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.bcoop.bcoop.ui.notification.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />
</navigation>
