<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/proveidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/applicant"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/applicantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="Name"
        android:textSize="14sp"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/habilitat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ability"
        android:textSize="14sp"
        android:layout_below="@+id/proveidor"/>
    <TextView
        android:id="@+id/habilitatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ability"
        android:textSize="14sp"
        android:layout_below="@+id/proveidor"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/dateFi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/end_date"
        android:textSize="14sp"
        android:layout_below="@+id/habilitat"/>
    <TextView
        android:id="@+id/dateFi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="End date"
        android:textSize="14sp"
        android:layout_below="@+id/habilitat"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/valoration"
        android:textSize="14sp"
        android:layout_below="@+id/dateFi"/>
    <TextView
        android:id="@+id/valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/valoration"
        android:textSize="14sp"
        android:layout_below="@+id/dateFi"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/comment"
        android:textSize="14sp"
        android:layout_below="@+id/valor"/>
    <TextView
        android:id="@+id/comment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/comment"
        android:textSize="14sp"
        android:layout_below="@+id/comment" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/comment1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp">
        <Button
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/chat_with"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/accept"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"/>
    </LinearLayout>


</RelativeLayout>