<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/applicant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/applicant"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/applicantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="Name"
        android:textSize="14sp"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/habilitat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ability"
        android:textSize="14sp"
        android:layout_below="@+id/applicant"/>
    <TextView
        android:id="@+id/habilitatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ability"
        android:textSize="14sp"
        android:layout_below="@+id/applicant"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/dateIni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/start_date"
        android:textSize="14sp"
        android:layout_below="@+id/habilitat"/>
    <TextView
        android:id="@+id/dateIni1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/start_date"
        android:textSize="14sp"
        android:layout_below="@+id/habilitat"
        android:layout_alignParentRight="true"/>


    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/price"
        android:textSize="14sp"
        android:layout_below="@+id/dateIni"/>
    <TextView
        android:id="@+id/price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/price"
        android:textSize="14sp"
        android:layout_below="@+id/dateIni1"
        android:layout_alignParentRight="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/price"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp">
        <Button
            android:id="@+id/refuse"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/refuse"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/accept"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false" />
    </LinearLayout>


</RelativeLayout>