<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:padding="10dp"
    tools:layout_editor_absoluteX="35dp"
    tools:layout_editor_absoluteY="16dp"
    tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteUser"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="32sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/writeDelete"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newUsernameForm"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/red_button_background"
                android:text="@string/confirmbutton"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>